--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-gesture-handler')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.facebook.react:react-native:+'
