--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <meta-data android:name="com.google.ar.core" android:value="optional" />
+     <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyBAefhRlXEH3vCko-zZTX6PHllTR6av4WI"/>
     </application>
 
 </manifest>
