--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-elements": "^1.1.0",
+    "react-native-geojson": "^0.1.1",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-maps": "^0.23.0",
+    "react-native-multibar": "0.0.6",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.5.1",
     "react-viro": "2.13.0"
   },
   "devDependencies": {
